--- a/src/components/ItemsList/ItemsList.css
+++ b/src/components/ItemsList/ItemsList.css
@@ -2,3 +2,27 @@
     width: 300px;
     margin: 100px auto 0;
 }
+
+/* Transition styles */
+
+.move-enter {
+    opacity: 0.01;
+    transform: translate(-40px, 0)
+}
+
+.move-enter-active {
+    opacity: 1;
+    transform: translate(0, 0);
+    transition: all 500ms ease-in;
+}
+
+.move-exit {
+    opacity: 1;
+    transform: translate(0, 0)
+}
+
+.move-exit-active {
+    opacity: 0.01;
+    transform: translate(40px, 0);
+    transition: all 500ms ease-in;
+}
